[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "imas-ambix"
dynamic = ["version"]
description = "Fusion World Model — distilling experimental data into physics-informed generative models"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Simon McIntosh", email = "simon.mcintosh@iter.org" }]
license = { text = "LGPL-3.0-or-later" }
keywords = [
    "fusion",
    "world model",
    "transformer",
    "plasma physics",
    "IMAS",
    "ITER",
    "machine learning",
    "generative model",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # --- Core ML: transformer training on GPU ---
    "torch>=2.6",
    "lightning>=2.5",
    "transformers>=4.48",
    "datasets>=3.2",
    "safetensors>=0.5",
    # --- Experiment tracking & configuration ---
    "wandb>=0.19",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # --- Data handling ---
    "numpy>=2.2",
    "pandas>=2.2",
    "xarray>=2025.1",
    "h5py>=3.12",
    "zarr>=3.0",
    # --- Tokenization & embeddings ---
    "tiktoken>=0.9",
    "sentence-transformers>=3.4",
    # --- Utilities ---
    "rich>=13.9",
    "click>=8.1",
    "pydantic>=2.10",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "mypy>=1.14",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Repository = "https://github.com/iterorganization/imas-ambix"
Documentation = "https://iterorganization.github.io/imas-ambix"
Issues = "https://github.com/iterorganization/imas-ambix/issues"

[project.scripts]
ambix = "imas_ambix.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["imas_ambix"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
